# raven-live-agent

./: .env.example  .gitignore  LICENSE  README.md  cloudbuild.yaml  deploy_cloud_run.sh  design.md  eleven.md  heir.md  practices.md  practices2.md  skilldoc.md  stream.md  stream2.md  stream3.md  stream4.md  stream5.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: agent.py  live_incident_agent.py
backend/app/data/: sop_catalog.json
backend/app/fallback/: __init__.py  eleven_fallback.py
backend/app/grounding/: __init__.py  vector_store.py
backend/app/safety/: __init__.py  basic_guardrails.py
backend/app/tools/: __init__.py  grounding_tools.py  risk_tools.py  vector_grounding_tools.py
backend/data/sources/: authoritative_source_catalog.json  incident_knowledge.jsonl  nigeria_authoritative_incident_knowledge.jsonl
backend/eval/: __init__.py  eval_agent.py  eval_grounding.py  test_eval.py
backend/eval/data/: grounding_eval_report.json  grounding_eval_set.jsonl  tool_trajectory.evalset.json  tool_trajectory.test.json
backend/scripts/: ingest_vector_data.py
backend/skills/hazard-detection-skill/: SKILL.md
backend/skills/incident-brief-skill/: SKILL.md
backend/skills/incident-knowledge-skill/: SKILL.md
backend/skills/sop-guidance-skill/: SKILL.md
backend/skills/weather-risk-skill/: SKILL.md
backend/tests/: test_eleven_fallback.py
docs/: demo_script.md  devpost_submission_draft.md  founder_story.md  grounding_deployment_plan.md  mar_10_progress.md  mar_7_kickoff.md  (+6 more)
(+14 files in other folders)
